<resources>
    <string name="app_name">SP Accounts</string>
    <string name="title_activity_invoice_summary">Invoice Summary</string>
    <!--<string name="url" translatable="false">http://192.168.1.109:321/</string>-->
    <!--<string name="url" translatable="false">http://www.spappsportal.com/</string>-->
    <!--8 is  test and 7 is hosted-->
    <string name="url" translatable="false">http://jdadmin-001-site8.itempurl.com/</string>
    <!--<string name="url" translatable="false">http://jdadmin-001-site7.itempurl.com/</string>-->
    <string name="rupees">₹ %1$s</string>
    <string name="failed_try_again">Failed attempt. Please try again</string>
    <string name="failed_server">Failed to get data from server.</string>111
    <string name="welcome">Welcome %1$s</string>
    <string name="balance_due">Balance Due: </string>
    <string name="paid_amount">Paid Amount: ₹ %1$s</string>
    <string name="due_date">Due Date: %1$s</string>
    <string name="no_items">No items</string>
    <string name="to">to</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="or">Or</string>
    <string name="give_valid">Give valid information</string>
    <string name="email_colon">Email:</string>
    <string name="website_colon">Website:</string>
    <string name="landline_colon">Landline:</string>
    <string name="mobile_colon">Mobile:</string>
    <string name="other_phone_colon">Other Phones:</string>
    <string name="billing_address_colon">Billing Address:</string>
    <string name="shipping_address_colon">Shipping address:</string>
    <string name="payment_term_colon">Payment Term:</string>
    <string name="notes_colon">Notes:</string>
    <string name="outstanding_colon">Outstanding:</string>
    <string name="_days">%1$s days</string>
    <string name="sales_chart">Sales Chart</string>
    <string name="sales_nsummary">Sales Summary</string>
    <string name="purchase_summary">Purchase Summary</string>
    <string name="other_expense_summary">Other Expense Summary</string>
    <string name="customers">Customers</string>
    <string name="suppliers">Suppliers</string>
    <string name="days_past_due">%1$s days past due</string>
    <string name="due_days">Due days: %1$s</string>
    <string name="approvals">Approvals</string>
    <string name="invoice_amount_label">Invoice Amount: ₹ %1$s</string>
    <string name="current_amount_label">Current Amount: </string>
    <string name="advance_amount_label">Advance Amount: </string>
    <string name="balance_amount_label">Balance Amount: ₹ %1$s</string>
    <string name="approve_q">Do you want to approve this?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="previous_payment_label">Previous Payment: ₹ %1$s</string>
    <string name="include_internal_companies">Include Internal Companies</string>
    <string name="payment_due_date">Payment due date: %1$s</string>
    <string name="account_label">Account: %1$s</string>
</resources>
