<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="true"
        android:animateLayoutChanges="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="InvoiceNO"
            android:textColor="@color/primary_text"
            android:textSize="17sp"
            android:id="@+id/invoice_no"
            android:layout_toLeftOf="@+id/current_amount_label"
            android:layout_toStartOf="@+id/current_amount_label" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invoice_amount_label"
            android:textColor="@color/secondary_text"
            android:textSize="13sp"
            android:id="@+id/invoice_amount"
            android:layout_below="@id/invoice_no"
            android:layout_toStartOf="@+id/paid_amount"
            android:layout_toLeftOf="@+id/paid_amount" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_amount_label"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:id="@+id/current_amount_label"
            android:layout_toLeftOf="@+id/current_amount"
            android:layout_toStartOf="@+id/current_amount"
            android:layout_alignBottom="@+id/current_amount"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupees"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:id="@+id/current_amount"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_payment_label"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:id="@+id/paid_amount"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/current_amount"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_amount_label"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:id="@+id/balance_amount"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/paid_amount"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>