<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.thrithvam.spaccounts.SupplierDetails"
    android:background="@drawable/primary_gradient">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen_data">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                android:animateLayoutChanges="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:animateLayoutChanges="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="16sp"
                        android:textColor="@color/primary_text"
                        android:typeface="monospace"
                        android:id="@+id/company_name"
                        android:padding="5dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/contact_title"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/contact_person_name"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:typeface="sans"
                            android:id="@+id/email"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:typeface="sans"
                            android:id="@+id/website"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landline_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:typeface="sans"
                            android:id="@+id/landline"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:typeface="sans"
                            android:id="@+id/mobile"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other_phone_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/other_numbers"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/billing_address_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/billing_address"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shipping_address_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/shipping_address"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment_term_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/payment_term"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notes_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/notes"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/outstanding_colon"
                            android:textSize="13sp"
                            android:textColor="@color/secondary_text"
                            android:typeface="sans"/>
                        <TextView
                            android:paddingLeft="5dp"
                            android:paddingStart="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:typeface="sans"
                            android:id="@+id/outstanding"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <com.wang.avi.AVLoadingIndicatorView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorName="BallScaleMultipleIndicator"
        android:layout_gravity="center"
        app:indicatorColor="@android:color/white"
        android:id="@+id/loading_indicator"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
